--- a/_posts/2020-03-02-git.md
+++ b/_posts/2020-03-02-git.md
@@ -9,22 +9,32 @@ tags:
   - Git
 ---
 
-# Git 入门  
-万丈高楼平地起，盘龙卧虎高山齐。
 ## 基础语法，简单的提交、拉取(`小白也能会哦`)
+
 首先我们了解一下什么是Git,  
 它是一款开源的分布式版本控制系统，是由Linus Torvalds 为了帮助管理 Linux 内核开发而开发。  
 [Linus Torvalds](https://baike.baidu.com/item/%E6%9E%97%E7%BA%B3%E6%96%AF%C2%B7%E6%9C%AC%E7%BA%B3%E7%AC%AC%E5%85%8B%E7%89%B9%C2%B7%E6%89%98%E7%93%A6%E5%85%B9/1034429?fromtitle=Linus%20Torvalds&fromid=9336769)
+
 ### 下面是我学习的几个简单语法
-```
-git status (查询、修改、新增文件)
 
-git add (添加文件至暂停区，add后面加路径或.)
+- 查看修改的文件状态
+    ```bash
+    git status  
+    ```
+- 添加文件到暂停区，add后面加 `路径` 或 `.`
+    ```bash
+    git add .
+    ```
+- 将暂停区的文件推送至本地仓库，记的加上名字
+    ```bash
+    git commit -am ""
+    ```
+- 将本地仓库的文件上传至远程仓库
+    ```bash
+    git push
+    ```
+- 从远程仓库拉取文件至本地仓库
+    ```bash
+    git pull
+    ```
 
-git commin (将暂停区的文件推送到本地仓库，记得加上名字哦)
-
-git push （将本地仓库的文件上传到远程仓库）
-
-git pull (从远程仓库拉取文件至本地仓库)
-```
-[有事找度娘](http://baidu.com)
